<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">CaseStudy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OAK Flashligts</string>
    <string name="nav_header_subtitle">https://www.oaksoftware.co.uk/</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="flashlights">flashLights</string>
    <string name="coloredlights">coloredLights</string>
    <string name="sosalerts">sosAlerts</string>
    <string name="refresh_button_description">Refresh</string>
    <string name="pull_to_refresh">Pull to Refresh</string>
    <string name="sort_by_rating_count">Sort by Rating Count</string>
    <string name="sort_by_rating_value">Sort by Rating Value</string>
    <string name="search_by_name">Search by Name</string>
    <string name="search_by_packagename">Search by Packagename</string>
    <string name="downloadcounts">downloadCounts</string>
    <string name="ratingvalue">ratingValue</string>
    <string name="ratingcount">ratingCount</string>
    <string name="name">name</string>

</resources>