<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".ui.home.HomeFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp"
        android:background="@drawable/side_nav_bar"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <Button
            android:id="@+id/flashLights"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp"

            android:text="@string/flashlights" />

        <Button
            android:id="@+id/coloredLights"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp"

            android:text="@string/coloredlights" />

        <Button
            android:id="@+id/sosAlerts"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="20dp"

            android:text="@string/sosalerts" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>