<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/side_nav_bar"
    android:paddingHorizontal="12dp"
    tools:context=".ui.application.ApplicationFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sort_by_rating_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/sort_by_rating_value"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:text="@string/pull_to_refresh" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/sort_by_rating_count"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/sort_by_rating_count" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/name_editText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/search_by_name"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/side_nav_bar"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/app_layout" />

        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/side_nav_bar"
            android:indeterminateTint="?android:attr/colorActivatedHighlight"
            android:visibility="visible"
            app:cardCornerRadius="23dp"
            app:cardElevation="35dp"
            />

    </FrameLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>