<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/app_card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/side_nav_bar"
        android:weightSum="2">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/side_nav_bar"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/side_nav_bar"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/side_nav_bar"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/downloadCounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/downloadcounts"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ratingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/ratingvalue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/ratingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:paddingVertical="4dp"
                android:background="@drawable/side_nav_bar"
                android:text="@string/ratingcount"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>


